--- a/_includes/social.html
+++ b/_includes/social.html
@@ -9,8 +9,8 @@
     {% if site.github %}
 	  <a href="http://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a>
     {% endif %}
-    {% if site.instagram %}
-	  <a href="https://medium.com/@rwguerra" target="_blank"><i class="fa fa-medium"></i></a>
+    {% if site.medium %}
+	  <a href="https://medium.com/{{ site.medium }}" target="_blank"><i class="fa fa-medium"></i></a>
     {% endif %}
     {% if site.twitter %}
 	  <a href="http://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a>
