--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,6 +3,14 @@
   <h3>Publications</h3>
   <div class="panel panel-default">
     <div class="panel-body">
+	
+	
+	
+	
+		<h5>
+			<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">GUERRA, R. W. C.Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems. Medium, 2020. Disponível em: <https://medium.com/>.</a></strong>
+			<p><i class="fa fa-medium"></i>Blog publication: Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems</p>
+		</h5>
 		<h5>
 			<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">MEDEIROS, J. A. ; GUERRA FILHO, R. W. C. ; CAVALCANTI, D. H. S. ; VILLANUEVA, J. M. M. ; CUNHA, T. R. A. L. A. ; MACEDO, E. C. T. ; BRAZ, H. D. M. ; RODRIGUEZ, Y. P. M. . Sistema Fuzzy para previsão de séries temporais de demanda de energia elétrica. Gestão da Produção em Foco. 1ed.Belo Horizonte: Editora Poisson, 2018, v. 22, p. 1-255.</a></strong>
 			<p>Book chapter: Fuzzy system for forecasting electricity demand time series. (translated from portuguese)</p>
