--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,8 +8,8 @@
 	
 	
 		<h5>
-			<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">GUERRA, R. W. C.Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems. Medium, 2020. Disponível em: <https://medium.com/>.</a></strong>
-			<p><i class="fab fa-medium"></i>Blog publication: Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems</p>
+			<i class="fa fa-medium"></i>-<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">GUERRA, R. W. C.Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems. Medium, 2020. Disponível em: <https://medium.com/>.</a></strong>
+			<p>Blog publication: Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems</p>
 		</h5>
 		<h5>
 			<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">MEDEIROS, J. A. ; GUERRA FILHO, R. W. C. ; CAVALCANTI, D. H. S. ; VILLANUEVA, J. M. M. ; CUNHA, T. R. A. L. A. ; MACEDO, E. C. T. ; BRAZ, H. D. M. ; RODRIGUEZ, Y. P. M. . Sistema Fuzzy para previsão de séries temporais de demanda de energia elétrica. Gestão da Produção em Foco. 1ed.Belo Horizonte: Editora Poisson, 2018, v. 22, p. 1-255.</a></strong>
