--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,7 +8,7 @@
 	
 	
 		<h5>
-			<i class="fa fa-medium"></i>-<strong><a href="http://dx.doi.org/10.5935/978-85-7042-018-3.2018B001" target="_blank" title="Clique e leia na integra">GUERRA, R. W. C.Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems. Medium, 2020. Disponível em: <https://medium.com/>.</a></strong>
+			<strong><a href="https://medium.com/towards-artificial-intelligence/classic-methods-for-identification-of-first-order-plus-dead-time-fopdt-systems-d81b0484aa4e" target="_blank" title="Clique e leia na integra">GUERRA, R. W. C.Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems. Medium, 2020.</a></strong>
 			<p>Blog publication: Classic Methods for Identification of First Order Plus Dead Time (FOPDT)Systems</p>
 		</h5>
 		<h5>
