--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,41 +3,14 @@
   <h3>Portfolio</h3>
 	  <div class="panel panel-default">
 		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/artigos" target="_blank">Artigos</a></strong>
-			<p><i>Repositório destinado à artigos e papers submetidos em eventos.</i></p>
+			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/rwguerra/outlier_detection_electrical_demand_curve_deep_learning" target="_blank">Engineering undergratuation thesis codes</a></strong>
+			<p><i>Thesis: Outlier detection in a electrical demand curve - comparison of machine learning algorithms and deep learning autoencoder (python)</i></p>
 		</h5>
 		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/simuladorLoteria" target="_blank">Simulador Loteria</a></strong>
-			<p><i>Repositório destinado a simulação de sorteio da loteria federal brasileira criado em HTML, JavaScript, CSS.</i></p>
+			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/rwguerra/classic_identification_FOPDT" target="_blank">Classic methods for identification FOPDT</a></strong>
+			<p><i>Implementation of classic methods for identification of First Order Plus Dead Time (FOPDT) systems with MatLab.</i></p>
 		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/selenium-webdriver" target="_blank">Selenium WebDriver</a></strong>
-			<p><i>Automatizando testes com Selenium WebDriver em C# utilizando Page Objects.</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/fazendo-bi-do-zero" target="_blank">Fazendo BI do Zero</a></strong>
-			<p><i>Passo a passo de como fazer um projeto de BI (Business Intelligence) do planejamento aos testes de dashboards.</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/trabalhando-com-ssis" target="_blank">Trabalhando com SSIS</a></strong>
-			<p><i>Repositório de arquivos utilizados nos posts sobre a ferramenta SSIS (SQL Server Integration Service).</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/PowerBI-DataScience" target="_blank">Power BI Data Science</a></strong>
-			<p><i>Repositório de arquivos utilizados no Curso Microsoft Power BI Para Data Science oferecido pela Data Science Academy.</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/hackerranksolutions" target="_blank">Hacker Rank Solutions</a></strong>
-			<p><i>Repositório de soluções construídas em Python para os exercícios propostos como treinamento usando o site https://hackerrank.com.</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/arquivosparapowerbi" target="_blank">Arquivos para Power BI</a></strong>
-			<p><i>Repositório de arquivos para importação e exemplo em Power BI</i></p>
-		</h5>
-		<h5>
-			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/mateusblopes/fundamentos-big-data" target="_blank">Fundamentos Big Data</a></strong>
-			<p><i>Repositório de arquivos do Curso de Fundamentos Big Data com Apache Hadoop oferecido pela Never Stop Learning.</i></p>
-		</h5>
+	
 	</div>		  
 </div>
 </section>
