--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -4,11 +4,11 @@
 	  <div class="panel panel-default">
 		<h5>
 			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/rwguerra/outlier_detection_electrical_demand_curve_deep_learning" target="_blank">Engineering undergratuation thesis codes</a></strong>
-			<p><i>Thesis: Outlier detection in a electrical demand curve - comparison of machine learning algorithms and deep learning autoencoder (python)</i></p>
+			<p><i>Thesis: Outlier detection in a electrical demand curve - comparison of machine learning algorithms and deep learning autoencoder. (python)</i></p>
 		</h5>
 		<h5>
 			<i class="fa fa-github">&nbsp;&nbsp;</i><strong><a href="https://github.com/rwguerra/classic_identification_FOPDT" target="_blank">Classic methods for identification FOPDT</a></strong>
-			<p><i>Implementation of classic methods for identification of First Order Plus Dead Time (FOPDT) systems with MatLab.</i></p>
+			<p><i>Implementation of classic methods for identification of First Order Plus Dead Time (FOPDT) systems. (MatLab)</i></p>
 		</h5>
 	
 	</div>		  
